# pokedex

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
src/pokedex/: __init__.py  agent.py  cli.py  client.py  fetch.py  models.py  search.py  server.py  snapshot.py  store.py
tests/: conftest.py  test_agent.py  test_batch.py  test_cache.py  test_cli.py  test_fetch.py  test_search.py  test_server.py  test_snapshot.py  test_store.py
tests/fixtures/: pikachu.json
