[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokedex"
version = "0.1.0"
description = "Study Pokédex: a typed PokéAPI client laddering up to a Claude tool-using agent."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "hishel>=0.0.30,<1.0",
    "pydantic>=2.7",
    "tenacity>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pokedex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
